--- a/wiki/V8Convert_FunctionBinding.wiki
+++ b/wiki/V8Convert_FunctionBinding.wiki
@@ -34,6 +34,8 @@ cb = cv::ToInCa< void, int (char const *), ::puts >::Call;
 cb = cv::FunctorToInCa< MyFunctorType, bool (double) >::Call
 }}}
 
+(But see [V8Convert_XTo] for a more structured interface which is arguably even simpler to use.)
+
 Because these templates _create_ `v8::InvocationCallback` functions at compile-time, they require no dynamically-allocated proxy objects or other hidden memory usage like some binding mechanisms do. They do add some runtime overhead, but not notably more than hand-written/optimized solutions do. Their overhead comes in the form of the intermediary/generated `InvocationCallback`s and the time/space it takes to convert arguments and return values to/from JS.
 
 The library does as much work as possible at compile time to help detect type-conversion errors early and help avoid extra runtime costs.
@@ -301,128 +303,6 @@ See [V8Convert_Overloading].
 
 ==Non-Convertible Return Types==
 
-See [V8Convert_TipsAndTricks].
-
-==Unlocking the v8 Engine==
-
-See [V8Convert_TipsAndTricks].
-
-==Converting Native Exceptions to JS==
-
-See the examples in [V8Convert_TipsAndTricks].
-=Forwarding v8-supplied Arguments to Non-bound Functions=
-
-  * `forwardFunction()`
-  * `forwardMethod()`
-  * `forwardConstMethod()`
-
-Those functions allow the client to pass on `v8::Arguments` to non-bound functions "manually".
-
-*Achtung:* Because these functions use `FunctionToInCa` (and friends), they inherit the "v8 unlocking" behaviour from that class. That is described in much more detail in another section of this page, but in short: if the arguments list or return value of the function does not have any v8 types (`v8::Handle`, `v8::Arguments`, etc.) then then the v8 engine is _unlocked_ for the duration of the native call. _If_ the function, despite having no v8-specific arguments/return type, internally uses v8 (or calls another function which does), then it _must_ also use a `v8::Locker` _or_ clients must use `FunctionToInCa` (or compatible) instead of these functions and explicitly disable locking (see the documentation and examples on the [V8Convert_TipsAndTricks] page). If one of these two conditions are _not_ met, v8 will trigger an assertion at runtime (when the function is called from JS), killing the application (and frustrating the user). Debug builds of libv8 will dump an explanation of the error to `stderr`, but non-debug builds will silently crash.
-
-
-= Passing Native Arguments to JS Functions =
-
-We occasionally (or more often, or less often) want to call JS functions, in the form of `v8::Handle<v8::Function>` objects, from native code and pass them native-level parameters.
-
-One simple way to do this is via the `CallForwarder`, which is parameterized on the number of native arguments it accepts. Its interface looks like:
-
-{{{
-static v8::Handle<v8::Value> Call( v8::Handle<v8::Object> const & self,
-                                   v8::Handle<v8::Function> const & func,
-                                   ... N arguments ... );
-
-// Equivalent to Call( func, func, ... N args ... ).
-static v8::Handle<v8::Value> Call( v8::Handle<v8::Function> const & func,
-                                   ... N arguments ... );
-}}}
-
-The `self` object is the `func` object's logical `this` pointer. If you don't need a specific `this` object then use the second form of `Call()` (which is equivalent to passing `func` as the first _and_ second parameters to the first overload).
-
-{{{
-v8::Handle<v8::Value> rc;
-
-rc = cv::CallForwarder<0>::Call( someJsObject, jsFunction );
-// That's equivalent to jsFunction->Call( someJsObject, 0, NULL )
-
-rc = cv::CallForwarder<1>::Call( jsFunction, "argument 1" );
-rc = cv::CallForwarder<2>::Call( jsFunction, "argument 1", arg2 );
-...
-
-// We can fetch results from output parameters like this:
-v8::Handle<v8::Object> jobj( v8::Object::New() );
-rc =
-   cv::CallForwarder<1>::Call( jsFunction, jobj );
-   // If jsFunction modifies jobj, we can now see those changes.
-}}}
-
-
-=Tips and Tricks=
-== Overloading Bound Functions ==
-
-See [V8Convert_Overloading].
-
-== Converting Native Exceptions to JS ==
-
-v8 does not like for client-thrown exceptions to propagate through it, and therefore bindings like the following can be dangerous to an app's lifetime:
-
-{{{
-v8::InvocationCallback cb = cv::FunctionToInCa< int (),someFuncWhichThrows>::Call;
-}}}
-
-If that function throws in the context of a JS-initiated call, it might crash v8. And when i say "might", i mean "it almost certainly will."
-
-The `InCaCatcher` class template creates an `InvocationCallback` function which calls a client-specified `InCa` and catches any exceptions of a given base type. It has a template option which specifies whether other exceptions should be propagated or converted into "unknown error" for JS, and this property allows us to chain the catchers to handle multiple concrete exception types.
-
-It can, in principal, catch and report any exception type which meets the following conditions: it must have a const member method taking no arguments and returning an error message value in a type which is convertible to JS using `CastToJS()`. e.g. (`char const * std::exception::what()`) qualifies nicely. A hypothetical (`int MyException::GetErrorCode()`) would also qualify, provided it is const, though the messages it returns to v8 would simply be stringified numbers.
-
-`InCaCatcher` has a relatively detailed interface, which is documented (in corresponding detail) here:
-
-  [http://code.google.com/p/v8-juice/source/browse/convert/include/v8/convert/detail/invocable_core.hpp invocable_core.hpp]
-
-Search that file for `struct InCaCatcher` and the API docs are just above that.
-
-The `InCaCatcher_std` template is a `InCaCatcher` convenience wrapper which handles `std::exception` errors (and subtypes).
-
-Example usage:
-
-{{{
-typedef InCaCatcher<
-       std::exception, // type to catch (by (const &)!)
-       char const *(), // signature of message-getter
-       &std::exception::what, // message-fetching method
-       InCaToInCa<callbackWhichThrowsStdException>, // the callback to try/catch
-       false // whether to propagate other exceptions or not (default=false)
-   > Catcher;
-
-// Note: InCaToInCa<> turns an InvocationCallback into a "type-rich" InCa.
-
-// Or, more simply (for std::exception):
-typedef InCaCatcher_std< InCaToInCa<callbackWhichThrowsStdException> > Catcher;
-
-// Get the callback function with:
-v8::InvocationCallback cb = Catcher::Call;
-}}}
-
-Here's an example which demonstrates how we can use `std::string` as an exception type (_not_ that i recommend doing so, but this same approach can be used for custom exception types):
-
-{{{
-void throwStdString()
-{
-    throw std::string("std::string thrown as an exception.");
-}
-
-v8::InvocationCallback cb =
-  cvv8::InCaCatcher<std::string,
-    char const * () const,
-    &std::string::c_str,
-    FunctionToInCa< void (), throwStdString >
-  >::Call;
-}}}
-
-When called from JS, the script will get an exception containing the error string (but converted to a JS `Error` object).
-
-For examples of chaining these to support multiple exception types, including handling exception hierarchies, see the demo code and/or the API documentation.
 
 == Non-convertible (or ignored) Return Types ==
 
@@ -435,6 +315,7 @@ v8::InvocationCallback cb = cv::FunctionToInCaVoid<SomeNonConvertibleType (args.
 We can also use that to bind functions whos return types we _could_ convert but don't want to for some reason (e.g. we don't want native error codes going back to JS).
 
 *Achtung:* Be careful not to leak resources this way. If dynamically-allocated resources are returned from a function bound this way, they will be irrevocably leaked on every call to the function!
+
 
 == Unlocking v8 for the Duration of a Call ==
 
@@ -514,3 +395,111 @@ cb = cv::FunctionToInCa< int (MyType *, double), some_function, true >::Call;
 }}}
 
 Note, however, that _non-member functions_ bound as JS-side member functions to such a native do not "know" that they have been "upgraded" to be a member method, and do not consider the bound type for unlocking purpose (but parameter/return types are considered). In such a case, explicitly disabling locking for that function might be required (see above) or the functions might need a `v8::Locker` added to them.
+
+== Converting Native Exceptions to JS ==
+
+v8 does not like for client-thrown exceptions to propagate through it, and therefore bindings like the following can be dangerous to an app's lifetime:
+
+{{{
+v8::InvocationCallback cb = cv::FunctionToInCa< int (),someFuncWhichThrows>::Call;
+}}}
+
+If that function throws in the context of a JS-initiated call, it might crash v8. And when i say "might", i mean "it almost certainly will."
+
+The `InCaCatcher` class template creates an `InvocationCallback` function which calls a client-specified `InCa` and catches any exceptions of a given base type. It has a template option which specifies whether other exceptions should be propagated or converted into "unknown error" for JS, and this property allows us to chain the catchers to handle multiple concrete exception types.
+
+It can, in principal, catch and report any exception type which meets the following conditions: it must have a const member method taking no arguments and returning an error message value in a type which is convertible to JS using `CastToJS()`. e.g. (`char const * std::exception::what()`) qualifies nicely. A hypothetical (`int MyException::GetErrorCode()`) would also qualify, provided it is const, though the messages it returns to v8 would simply be stringified numbers.
+
+`InCaCatcher` has a relatively detailed interface, which is documented (in corresponding detail) here:
+
+  [http://code.google.com/p/v8-juice/source/browse/convert/include/v8/convert/detail/invocable_core.hpp invocable_core.hpp]
+
+Search that file for `struct InCaCatcher` and the API docs are just above that.
+
+The `InCaCatcher_std` template is a `InCaCatcher` convenience wrapper which handles `std::exception` errors (and subtypes).
+
+Example usage:
+
+{{{
+typedef InCaCatcher<
+       std::exception, // type to catch (by (const &)!)
+       char const *(), // signature of message-getter
+       &std::exception::what, // message-fetching method
+       InCaToInCa<callbackWhichThrowsStdException>, // the callback to try/catch
+       false // whether to propagate other exceptions or not (default=false)
+   > Catcher;
+
+// Note: InCaToInCa<> turns an InvocationCallback into a "type-rich" InCa.
+
+// Or, more simply (for std::exception):
+typedef InCaCatcher_std< InCaToInCa<callbackWhichThrowsStdException> > Catcher;
+
+// Get the callback function with:
+v8::InvocationCallback cb = Catcher::Call;
+}}}
+
+Here's an example which demonstrates how we can use `std::string` as an exception type (_not_ that i recommend doing so, but this same approach can be used for custom exception types):
+
+{{{
+void throwStdString()
+{
+    throw std::string("std::string thrown as an exception.");
+}
+
+v8::InvocationCallback cb =
+  cvv8::InCaCatcher<std::string,
+    char const * () const,
+    &std::string::c_str,
+    FunctionToInCa< void (), throwStdString >
+  >::Call;
+}}}
+
+When called from JS, the script will get an exception containing the error string (but converted to a JS `Error` object).
+
+For examples of chaining these to support multiple exception types, including handling exception hierarchies, see the demo code and/or the API documentation.
+
+=Forwarding v8-supplied Arguments to Non-bound Functions=
+
+  * `forwardFunction()`
+  * `forwardMethod()`
+  * `forwardConstMethod()`
+
+Those functions allow the client to pass on `v8::Arguments` to non-bound functions "manually".
+
+*Achtung:* Because these functions use `FunctionToInCa` (and friends), they inherit the "v8 unlocking" behaviour from that class. That is described in much more detail in another section of this page, but in short: if the arguments list or return value of the function does not have any v8 types (`v8::Handle`, `v8::Arguments`, etc.) then then the v8 engine is _unlocked_ for the duration of the native call. _If_ the function, despite having no v8-specific arguments/return type, internally uses v8 (or calls another function which does), then it _must_ also use a `v8::Locker` _or_ clients must use `FunctionToInCa` (or compatible) instead of these functions and explicitly disable locking (see the documentation and examples on the [V8Convert_TipsAndTricks] page). If one of these two conditions are _not_ met, v8 will trigger an assertion at runtime (when the function is called from JS), killing the application (and frustrating the user). Debug builds of libv8 will dump an explanation of the error to `stderr`, but non-debug builds will silently crash.
+
+
+= Passing Native Arguments to JS Functions =
+
+We occasionally (or more often, or less often) want to call JS functions, in the form of `v8::Handle<v8::Function>` objects, from native code and pass them native-level parameters.
+
+One simple way to do this is via the `CallForwarder`, which is parameterized on the number of native arguments it accepts. Its interface looks like:
+
+{{{
+static v8::Handle<v8::Value> Call( v8::Handle<v8::Object> const & self,
+                                   v8::Handle<v8::Function> const & func,
+                                   ... N arguments ... );
+
+// Equivalent to Call( func, func, ... N args ... ).
+static v8::Handle<v8::Value> Call( v8::Handle<v8::Function> const & func,
+                                   ... N arguments ... );
+}}}
+
+The `self` object is the `func` object's logical `this` pointer. If you don't need a specific `this` object then use the second form of `Call()` (which is equivalent to passing `func` as the first _and_ second parameters to the first overload).
+
+{{{
+v8::Handle<v8::Value> rc;
+
+rc = cv::CallForwarder<0>::Call( someJsObject, jsFunction );
+// That's equivalent to jsFunction->Call( someJsObject, 0, NULL )
+
+rc = cv::CallForwarder<1>::Call( jsFunction, "argument 1" );
+rc = cv::CallForwarder<2>::Call( jsFunction, "argument 1", arg2 );
+...
+
+// We can fetch results from output parameters like this:
+v8::Handle<v8::Object> jobj( v8::Object::New() );
+rc =
+   cv::CallForwarder<1>::Call( jsFunction, jobj );
+   // If jsFunction modifies jobj, we can now see those changes.
+}}}
